# Recipe

./: .gitignore  pyproject.toml
auth/: forms.py  urls.py  views.py
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20210308_0751.py  0003_blog_blog_image.py
recipe/: settings.py  urls.py
recipe_app/: admin.py  forms.py  models.py  urls.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_food_image.py
recipe_profile/: admin.py  forms.py  models.py  urls.py  views.py
recipe_profile/migrations/: 0001_initial.py
recipe_user/: admin.py  models.py
recipe_user/migrations/: 0001_initial.py  0002_auto_20210321_0459.py
templates/: base.html  blog_view.html  generic_forms.html  index.html  login.html  profile.html  profile_image.html  recipe.html  recipe_view.html  signup.html
